--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"axios": "^0.16.2",
 		"react": "16.0.0-alpha.12",
-		"react-native": "0.46.3"
+		"react-native": "0.46.3",
+		"react-native-router-flux": "^4.0.0-beta.11"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
