--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
 	},
 	"dependencies": {
 		"axios": "^0.16.2",
+		"http": "0.0.0",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.46.3",
-		"react-native-router-flux": "^4.0.0-beta.11"
+		"react-native-router-flux": "^4.0.0-beta.11",
+		"url": "^0.11.0"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
