--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"private": true,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
+		"test": "jest",
+		"pretty": "prettier --list-different --single-quote --print-width=80 --write \"src/**/*.js\""
 	},
 	"dependencies": {
 		"axios": "^0.16.2",
@@ -18,6 +19,7 @@
 		"babel-jest": "20.0.3",
 		"babel-preset-react-native": "2.1.0",
 		"jest": "20.0.4",
+		"prettier": "^1.5.3",
 		"react-test-renderer": "16.0.0-alpha.12"
 	},
 	"jest": {
